# online_store_project

./: index.html  main.py  pyproject.toml
